digiKam 6.1.0 - Release date: 2019-03-10

*****************************************************************************************************
NEW FEATURES:

General     : New plugins interface for digiKam and Showfoto named dplugins.
General     : All export tools become generic plugins and are shared with Showfoto.
BQM         : Add new advanced settings in resize tool.
BQM         : All Batch Queue Manager tools become Bqm plugins.
Editor      : All Image Editor tools become Editor plugins and are shared with Showfoto.


*****************************************************************************************************
BUGFIXES:

001 ==> 279216 - "Resize image" feature is missing some useful options [patch].
002 ==> 368779 - Missing translations to Plugin Categories columns in setup page.
003 ==> 165852 - Google Youtube video uploader.
004 ==> 404578 - Links broken on downloadpage for 6.0.0.
005 ==> 402069 - FAQ link on Support page is broken.
006 ==> 404503 - There is a typo in support section of website.
007 ==> 404621 - I can not import the album Google Photo.
008 ==> 404642 - digiKam flatpak: Please include mysql driver (for using an external mysql db).
009 ==> 404690 - There is an unwanted bar in the left screen edge in full screen view.
010 ==> 404736 - Merging tags keeps popping up confirmation dialogs every second.
011 ==> 404737 - digiKam does not compile with opencv 3.4.1.
012 ==> 404735 - F2 should edit tag name when tag name has focus.
013 ==> 