@@ -25,4 +25,5 @@ BUGFIXES:
 010 ==> 404736 - Merging tags keeps popping up confirmation dialogs every second.
 011 ==> 404737 - digiKam does not compile with opencv 3.4.1.
 012 ==> 404735 - F2 should edit tag name when tag name has focus.
-013 ==> 
+013 ==> 404748 - Default Album rename dialog should be larger (or save its size when changed).
+014 ==> 
